\name{GreyListChIP}
\title{GreyListChIP News}
\encoding{UTF-8}

\section{Version 1.1.1}{
  \itemize{
    \item{Change maintainer email.}
  }
}

\section{Version 1.0.0}{
  \itemize{
    \item{Initial release.}
  }
}