@@ -1,0 +1,38 @@
+chr10	38528030	38529790
+chr10	42070420	42070660
+chr16	34571420	34571640
+chr16	34572700	34572930
+chr16	34584530	34584840
+chr16	34585000	34585220
+chr16	34585700	34586380
+chr16	34586660	34587100
+chr16	34587060	34587660
+chr16	34587900	34588170
+chr16	34593000	34593590
+chr16	34594490	34594720
+chr16	34594900	34595150
+chr16	34595320	34595570
+chr16	46380910	46381140
+chr16	46386270	46386530
+chr16	46390180	46390930
+chr16	46394370	46395100
+chr16	46395670	46395910
+chr16	46398780	46399020
+chr16	46400700	46400970
+chr1	124450730	124450960
+chr20	28513520	28513770
+chr20	31060210	31060770
+chr20	31061050	31061560
+chr20	31063990	31064490
+chr20	31067930	31069060
+chr20	31069000	31069280
+chr21	8219780	8220120
+chr21	8234330	8234620
+chr2	90397520	90397900
+chr2	90398120	90398760
+chr3	93470260	93470870
+chr4	49118760	49119010
+chr4	49120790	49121130
+chr5	49601430	49602300
+chr5	49657080	49657690
+chr5	49661330	49661570
