@@ -2,6 +2,14 @@
 \title{GreyListChIP News}
 \encoding{UTF-8}
 
+\section{Version 1.11.1}{
+  \itemize{
+    \item{Allow "karyotype" to be specified as a GRanges object.}
+    \item{Include Anshul Kundaje's black lists for convenience.}
+    \item{Support merging of grey lists from multiple input  files.}
+  }
+}
+
 \section{Version 1.1.1}{
   \itemize{
     \item{Change maintainer email.}
